refactor: use path aliases in profile preview

--- a/package.json
+++ b/package.json
@@ -59,14 +59,8 @@
     "dev": "vite",
     "build": "vite build --sourcemap",
     "serve": "vite preview",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
